# prayer_of_the_moment

./: .gitignore  .tool-versions  README.md  lol.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
src/cli/: cli.py
src/core/: pdf_parser.py
src/utils/: pdf_parser.py  return_dfferent_spaces.py
tests/: test_cli.py  test_pdf_parser.py
