[project]
name = "prayer-of-the-moment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf>=4.0.0", # Korvataan PyPDF2
    "pdfplumber>=0.10.0",
    "loguru>=0.7.0",
    "click>=8.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
